adding more tests